<resources>
    <string name="app_name">Feline Adoption Agency</string>
    <string name="home">Home</string>
    <string name="cats">Cats</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="framentHome">Home</string>
    <string name="fragmentCats">Cats</string>
    <string name="nav_header_image_description">Image of small kitten</string>
    <string name="nav_login">Login</string>
    <string name="nav_support">Support</string>
    <string name="nav_help">Help</string>
    <string name="nav_feedback">Feedback</string>

    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>

    <string name="home_picture_image">Image of kittens</string>
    <string name="welcome">Our mission is to find caring homes for our cats and kittens. Sign-up to start the process.</string>
    <string name="featured_cat_description">Images of this month\'s featured cat</string>
    <string name="featured_cat_title">This month\'s featured cat:</string>

    <string name="distance">Search dist.(miles): %1$d</string>
    <string name="proximity_dialog_title">Choose value</string>
    <string name="choose_dialog_title">Choose a value</string>
    <string name="ok_button_text">OK</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="max_distance_text">Enter maximum search distance</string>

    <string name="inmate_image_description">Picture of one of the cats</string>
    <string name="delete_button_description">Delete cat button</string>
    <string name="default_cat_name">Cat clone</string>

    <string name="action_view_cats">uk.ac.aber.dcs.cs31620.faa.action.VIEW_CATS</string>
    <string name="cats_uri">http://faa.cs31620.dcs.aber.ac.uk/cats</string>
    <string name="default_image_path">file:///android_asset/images/default_image.png</string>

    <string name="cat_picture_image">Picture of new cat</string>
    <string name="cat_name">Name:</string>
    <string name="catGender">Gender:</string>
    <string name="catAge">Age:</string>
    <string name="catBreed">Breed:</string>
    <string name="new_cat_description">Enter description here</string>
    <string name="dob">Date of birth:</string>
    <string name="dob_entry">Enter date here</string>
    <string name="enterImageMsg">Tap image to add/replace image</string>
    <string name="date_format">dd/MM/yyyy</string>
    <string name="cannot_create_image_file">Cannot take a picture, possibly insufficient space</string>
    <string name="missing_data">Name and date fields must have values</string>
    <string name="fragmentAddCat">Add cat</string>
    <string name="cannotTakePicture">Unable to start Camera app</string>


    <!-- Arrays of values -->
    <string-array name="gender_array">
        <item>Any gender</item>
        <item>Female</item>
        <item>Male</item>
    </string-array>

    <string-array name="age_range_array">
        <item>Any age</item>
        <item>Up to 1 year</item>
        <item>1 &#8211; 2 years</item>
        <item>2 &#8211; 5 years</item>
        <item>Over 5 years</item>
    </string-array>

    <string-array name="breed_array">
        <item>Any breed</item>
        <item>Abyssinian</item>
        <item>Balinese</item>
        <item>Bengal</item>
        <item>Birman</item>
        <item>British Shorthair</item>
        <item>Other</item>
    </string-array>

</resources>